fix layout issues

--- a/src/components/Container/container.module.css
+++ b/src/components/Container/container.module.css
@@ -1,5 +1,5 @@
 .container {
-  margin-inline: 1.5rem;
+  /* margin-inline: 1.5rem; */
   max-width: 1440px;
 }
 
