--- a/src/pages/support-a-learner/testimonial/Testimonial.css
+++ b/src/pages/support-a-learner/testimonial/Testimonial.css
@@ -47,10 +47,10 @@
   padding: 10px;
   border-radius: 6px;
 
-  display: inline-block;
+  /* display: inline-block; */
 
   position: absolute;
-  top: 80%;
+  top: 75%;
   transform: translateY(-50%);
   font-size: 1rem; /*Adjust the font size as needed */
   cursor: pointer;
@@ -64,6 +64,10 @@
 
 .right-arrow {
   right: 30px;
+  z-index: 10;
+
+  width: 40px;
+  height: auto;
 }
 
 @media screen {
